# aegis-agentic

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.gateway  Dockerfile.scheduler  Makefile  PIVOT_PLAN.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  docker-compose-services.yml  docker-compose.gateway.yml  docker-compose.yml  prometheus.yml
.mimocode/: .cron-lock
agent/: Cargo.toml
agent/src/: error.rs  executor.rs  lib.rs  state_machine.rs  types.rs
api/: Cargo.toml  Dockerfile  Security_of_Project.md  alertmanager.yml  docker-compose.observability.yml  grafana_dashboards.yml  grafana_datasources.yml  prometheus.yml  prometheus_alerts.yml
api/migrations/: 20260523000001_create_api_keys.sql  20260523000003_create_audit_logs.sql
api/scripts/: deploy.sh  setup-env.sh  validate.sh
api/src/: allocation_client.rs  api_key_handlers.rs  auth.rs  backend_manager.rs  backup.rs  config.rs  database.rs  db_migrations.rs  jwt_auth.rs  lib.rs  main.rs  request_queue.rs  request_validator.rs  telemetry.rs
api/src/handlers/: agent.rs  health.rs  mod.rs  session.rs  tool.rs
api/tests/: chaos_tests.rs  contract_tests.rs  integration_test_harness.rs
audit/src/: engine.rs
benchmarks/: Cargo.toml
benchmarks/benches/: speculative_decoding.rs
coordination/: Cargo.toml
coordination/src/: lib.rs  message_bus.rs  shared_memory.rs  supervisor.rs  types.rs
gateway/: Cargo.toml  grafana_dashboard.json
gateway/kubernetes/: deployment.yml
gateway/migrations/: 20260523000002_create_inference_logs.sql
gateway/scripts/: test.sh
gateway/src/: cache.rs  config.rs  credentials.rs  handlers.rs  inference_handler.rs  lib.rs  llm_backend.rs  main.rs  metrics.rs  middleware.rs  security_middleware.rs  service.rs
gateway/tests/: e2e_workflow_tests.rs  load_tests.rs  real_backend_integration.rs
inference-backends/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  MOCK_BACKEND.md  README.md  config.example.yaml
inference-backends/examples/: basic_usage.rs
inference-backends/src/: config.rs  error.rs  huggingface.rs  lib.rs  llama_cpp.rs  llama_cpp_safe.rs  llama_cpp_sys.rs  llamacpp.rs  metrics.rs  mock.rs  models.rs  production_manager.rs  router.rs  traits.rs  vllm.rs
kubernetes/: deployment.yaml  gateway-deployment.yaml  pdb.yaml  service.yaml
memory/: Cargo.toml
memory/src/: consolidation.rs  lib.rs  long_term.rs  retrieval.rs  short_term.rs  types.rs
monitoring/: prometheus.yml
monitoring/rules/: scheduler.yml
observability/: Cargo.toml  INTEGRATION.md  README.md
observability/src/: error.rs  health.rs  lib.rs  metrics.rs  tracing.rs
proto/: Cargo.toml
proto/src/proto/: inference.proto
resilience/: Cargo.toml  INTEGRATION.md  README.md
resilience/src/: circuit_breaker.rs  error.rs  graceful_degradation.rs  lib.rs  retry.rs  timeout.rs
runtime/: Cargo.toml
runtime/src/: error.rs  lib.rs
scheduler/: Cargo.toml  build.rs
scheduler/config/: scheduler.yaml
scheduler/examples/: grpc_client.rs
scheduler/proto/: allocation.proto
scheduler/src/: allocator.rs  config.rs  consensus.rs  consensus_allocator.rs  consensus_kv_cache.rs  graceful_shutdown.rs  grpc_allocation_service.rs  health.rs  lib.rs  remote_allocator.rs  state_machine_grpc.rs
scheduler/tests/: consensus_allocation_tests.rs  failover_tests.rs
security/: Cargo.toml  INTEGRATION.md  README.md
security/src/: apikey.rs  auth.rs  error.rs  jwt.rs  lib.rs  rate_limiter.rs  tls.rs
session/: Cargo.toml
session/src/: lib.rs  manager.rs  message.rs  types.rs
speculative/: Cargo.toml
speculative/src/: coordinator.rs
telemetry/: Cargo.toml
telemetry/src/: distributed_tracing.rs  lib.rs  metrics.rs  otlp_export.rs
tools/: Cargo.toml
tools/src/: error.rs  http.rs  lib.rs  llm.rs  registry.rs  resilient.rs  trait_def.rs
