[package]
name = "aegis-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"

aegis-tools = { path = "../tools" }
aegis-memory = { path = "../memory" }
aegis-audit = { path = "../audit" }
