[package]
name = "aegis-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
tokio.workspace = true
criterion.workspace = true
rand.workspace = true

aegis-runtime = { path = "../runtime" }
aegis-proto = { path = "../proto" }
aegis-scheduler = { path = "../scheduler" }
aegis-speculative = { path = "../speculative" }
aegis-audit = { path = "../audit" }
inference-backends = { path = "../inference-backends" }

[[bench]]
name = "e2e_inference"
harness = false

[[bench]]
name = "kv_scheduler"
harness = false

[[bench]]
name = "speculative_decoding"
harness = false

[[bench]]
name = "audit_engine"
harness = false
