[package]
name = "aegis-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
prost.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
lru = "0.12"
parking_lot.workspace = true
thiserror.workspace = true
dashmap.workspace = true

# Security & Authentication
jsonwebtoken = "9"
base64 = "0.22"
chrono.workspace = true

# Metrics & Observability
prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry = "0.21"

# Futures & Async
futures-util = "0.3"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

[build-dependencies]
tonic-build.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
