[package]
name = "inference-backends"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util.workspace = true
async-trait = "0.1"

# HTTP & API
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14"

# Serialization
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging & Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# UUID
uuid.workspace = true
chrono.workspace = true

# Utilities
lazy_static.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rand.workspace = true

# Native inference
llama-cpp-2.workspace = true

# Testing
[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
