[package]
name = "observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Observability
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "fmt"] }
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"
prometheus = { version = "0.13", features = ["protobuf"] }

# Serialization
serde = { workspace = true }
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Time
chrono.workspace = true

# Utilities
parking_lot.workspace = true
dashmap.workspace = true
lazy_static = "1.4"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
