[package]
name = "aegis-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
actix-web = "4"
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
jsonwebtoken = "9"
uuid.workspace = true
chrono.workspace = true
base64 = "0.22"
parking_lot.workspace = true
prometheus.workspace = true

[build-dependencies]
prost-build = "0.12"
tonic-build.workspace = true
