[package]
name = "aegis-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

aegis-agent = { path = "../agent" }
aegis-tools = { path = "../tools" }
aegis-memory = { path = "../memory" }
aegis-session = { path = "../session" }
aegis-audit = { path = "../audit" }
